Fix render.yaml: switch to static site type

--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,7 @@
 services:
-  - type: web
+  - type: static
     name: videomonster-web
     env: static
     staticPublishPath: public
     buildCommand: npm run build
     branch: main
-    plan: free
