--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: static
     name: videomonster-web
     env: static
-    staticPublishPath: public
     buildCommand: npm run build
+    staticPublishPath: build
     branch: main
