Fix: remove build step for static HTML

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: static
     name: videomonster-web
     env: static
-    buildCommand: npm run build
-    staticPublishPath: build
+    staticPublishPath: .
+    buildCommand: ""
     branch: main
